Fix spacing for about us page #3

--- a/app/assets/stylesheets/_helpers.scss
+++ b/app/assets/stylesheets/_helpers.scss
@@ -109,6 +109,7 @@
   font-weight: 400;
   position: relative;
   padding-top: 10px;
+  margin-top: 12px;
 
   @media only screen and (min-width: $screen-sm-min) {
     font-size: 24px;
